--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -11,19 +11,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-06-03 Mon 18:48]
+#+CAPTION: Clock summary at [2019-06-03 Mon 19:05]
 | <75>                                               |        |      |      |       |
 | Headline                                           | Time   |      |      |     % |
 |----------------------------------------------------+--------+------+------+-------|
-| *Total time*                                       | *6:49* |      |      | 100.0 |
+| *Total time*                                       | *7:01* |      |      | 100.0 |
 |----------------------------------------------------+--------+------+------+-------|
-| Stories                                            | 6:49   |      |      | 100.0 |
-| Active                                             |        | 6:49 |      | 100.0 |
-| Edit release notes for previous sprint             |        |      | 3:36 |  52.8 |
-| Create a demo and presentation for previous sprint |        |      | 1:39 |  24.2 |
-| Sprint and product backlog grooming                |        |      | 0:24 |   5.9 |
-| Remove test model sanitizer                        |        |      | 0:20 |   4.9 |
-| Remove master headers                              |        |      | 0:50 |  12.2 |
+| Stories                                            | 7:01   |      |      | 100.0 |
+| Active                                             |        | 7:01 |      | 100.0 |
+| Edit release notes for previous sprint             |        |      | 3:36 |  51.3 |
+| Create a demo and presentation for previous sprint |        |      | 1:39 |  23.5 |
+| Sprint and product backlog grooming                |        |      | 0:24 |   5.7 |
+| Remove test model sanitizer                        |        |      | 0:20 |   4.8 |
+| Remove master headers                              |        |      | 1:02 |  14.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -217,8 +217,10 @@ We seem to have introduced testing to the reference implementation but
 left the canned tests still there. There shouldn't be any reason to
 keep these so remove them.
 
-*** STARTED Remove master headers                                     :story:
+*** COMPLETED Remove master headers                                   :story:
+    CLOSED: [2019-06-03 Mon 19:05]
     :LOGBOOK:
+    CLOCK: [2019-06-03 Mon 18:49]--[2019-06-03 Mon 19:01] =>  0:12
     CLOCK: [2019-06-03 Mon 18:28]--[2019-06-03 Mon 18:48] =>  0:20
     CLOCK: [2019-06-03 Mon 17:56]--[2019-06-03 Mon 18:12] =>  0:16
     CLOCK: [2019-06-03 Mon 16:52]--[2019-06-03 Mon 17:06] =>  0:14
